# edge-proxy

./: BUILD.bazel  README.md  Taskfile.yml  WORKSPACE  go.mod  go.sum
.devcontainer/: Dockerfile
api/v2/: BUILD.bazel  api.go
api/v3/: BUILD.bazel  api.go
bazel/: BUILD.bazel
bazel/private/: repositories.bzl
cmd/auth_server_v2/: BUILD.bazel
cmd/auth_server_v3/: BUILD.bazel
pkg/domains/clientcompany/auth/v2/: BUILD.bazel
pkg/domains/clientcompany/auth/v3/: BUILD.bazel
pkg/domains/clientcompany/claims/: BUILD.bazel
pkg/domains/mycompany/claims/: BUILD.bazel  mycompany_claims.go
pkg/utils/jwt/: BUILD.bazel  jwt_utils.go
