load("@io_bazel_rules_go//go:def.bzl", "go_library")

# -----------------------------------------------------------------------------

go_library(
    name = "api",
    srcs = ["api.go"],
    importpath = "github.com/celsosantos/edge-proxy/api/v3",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/type/v3:go_default_library",
        "@go_googleapis//google/rpc:code_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",  # maps to "@com_github_golang_protobuf//ptypes/wrappers:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)
