load("@io_bazel_rules_go//go:def.bzl", "go_library")

# -----------------------------------------------------------------------------

go_library(
    name = "jwt",
    srcs = ["jwt_utils.go"],
    importpath = "github.com/celsosantos/edge-proxy/pkg/utils/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@com_github_lestrrat_go_jwx//jwk:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)
